# drusniel-voxels

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
assets/config/: voxel_types.yaml  world.yaml
assets/shaders/: triplanar_terrain.wgsl
docs/: chunk-boundary-face-visibility.md  grass-rendering-fix.md
scripts/: build_atlas.py  convert_exr_to_png.py  download_pbr_textures.ps1
src/: constants.rs  environment.rs  lib.rs  main.rs
src/camera/: controller.rs  mod.rs  plugin.rs
src/config/: loader.rs
src/entity/: inventory.rs  mod.rs  wolf.rs
src/interaction/: mod.rs
src/rendering/: atlas.rs  materials.rs  mod.rs  plugin.rs  triplanar_material.rs
src/vegetation/: grass_material.rs  mod.rs
src/viewmodel/: mod.rs
src/voxel/: chunk.rs  meshing.rs  mod.rs  persistence.rs  plugin.rs  types.rs  world.rs
