[package]
name = "voxel_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
